# wingpanel-indicator-disk-usage

./: .nvimrc  README.md  meson.build  shell.nix
data/: gschema.xml
src/: Main.vala
src/Widgets/: OverlayIcon.vala
